Add comment to dev.html for clarity

--- a/public/dev.html
+++ b/public/dev.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-
+<!-- Just A Comment For December 23rd -->
   <div class="card-container" style="margin-top: 4%;">
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="https://avatars.githubusercontent.com/u/89993023?v=4" alt="Card image cap">
