Add dev.html page and update logo link in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -701,7 +701,7 @@
   <footer class="footer">
     <div class="top">
         <div class="content">
-            <a href="" class="logo">EMP<span class="yellow">NODE</span></a>
+            <a href="dev.html" class="logo">EMP<span class="yellow">NODE</span></a>
             <p>
                 India's Largest Employeers Tool for managing small to Large scale Companies within a Secure Environment
             </p>
