Adjust margin-top for card container in dev.html

--- a/public/dev.html
+++ b/public/dev.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="card-container">
+  <div class="card-container" style="margin-top: 12%;">
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="https://avatars.githubusercontent.com/u/89993023?v=4" alt="Card image cap">
       <div class="card-body">
