Add background color to body in dev.html

--- a/public/dev.html
+++ b/public/dev.html
@@ -11,6 +11,9 @@
       flex-wrap: nowrap;
       gap: 1rem;
     }
+    body{
+      background-color: hsl(210, 65%, 76%);
+    }
   </style>
 </head>
 <body>
